[tool.poetry]
name = "cronjob"
version = "0.1.0"
description = ""
authors = ["Est Chairat <est.kungzc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.812"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
